--- a/style.css
+++ b/style.css
@@ -5,13 +5,16 @@ body{
 
 nav{
     color:aquamarine;
-    background-color: rgb(105, 32, 168);
+    /*background-color: rgb(105, 32, 168);*/
     height: 15%;
+    background-image: linear-gradient(180deg,rgb(83, 83, 83),rgb(50, 49, 50));
+    border-bottom: 2px solid rgb(0, 0, 0);
 }
 
 nav #logo{
     size: 200%;
     height:98%;
     width:auto;
-    border:2px solid rgb(73, 177, 85)
+    border:2px solid rgb(0, 0, 0)
+    
 }
