--- a/style.css
+++ b/style.css
@@ -1,20 +1,32 @@
 body{
+
     margin: 0px;
     background-color: rgb(192, 125, 37);
 }
 
 nav{
-    color:aquamarine;
-    /*background-color: rgb(105, 32, 168);*/
+
     height: 12%;
     background-image: linear-gradient(180deg,rgb(83, 83, 83),rgb(50, 49, 50));
     border-bottom: 2px solid rgb(0, 0, 0);
+
+    position: sticky;
+    top:0px;
+
 }
 
 nav #logo{
+
     size: 200%;
     height:98%;
     width:auto;
-    border:2px solid rgb(0, 0, 0)
-    
+    border:2px solid rgb(0, 0, 0);
+    float: left;
+}
+
+nav #title{
+
+    background-color: rgb(248, 146, 146);
+    display: inline-block;
+    text-align: center;
 }
