--- a/style.css
+++ b/style.css
@@ -25,8 +25,11 @@ nav #logo{
 }
 
 nav #title{
-
+    
     background-color: rgb(248, 146, 146);
-    display: inline-block;
     text-align: center;
+    position: relative;
+    top: 33%;
+    bottom: 33%;
+    font-size: 2em;
 }
